--- a/src/templates/head_css.html
+++ b/src/templates/head_css.html
@@ -32,6 +32,8 @@
 
 <link href="{% static 'css/custom_common.css' %}" rel="stylesheet">
 
+<link href="{% static 'css/jquery-packed-img-strip.css' %}" rel="stylesheet">
+
 <!-- Bootstrap DateTimePicker Widget -->
 <link href="{% static 'css/datetimepicker.css' %}" rel="stylesheet">
 
