--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -25,7 +25,7 @@ figure {
     max-width: 100%;
 }
 
-figure > img {
+figure img {
     margin-bottom: 5px;
     line-height: 1;
     max-width: 100%;
