profile json export option

--- a/src/profile_manager/templates/profile_manager/profile_list.html
+++ b/src/profile_manager/templates/profile_manager/profile_list.html
@@ -25,7 +25,7 @@
            data-show-columns='true'
            {% if request.user.is_staff %}
             data-show-export="true"
-            data-export-types="['csv']"
+            data-export-types="['csv', 'json']"
            {% endif %}
 
            data-icons='icons'
