site name templates using config

--- a/src/portfolios/templates/portfolios/detail.html
+++ b/src/portfolios/templates/portfolios/detail.html
@@ -44,8 +44,8 @@
 
                 Use this link if you would like to share your portfolio with friends, family, as part of
                 an application, etc.  The people you share this link with will be able to see your portfolio
-                without having to sign in to the Hackerspace.  Your public portfolio is available even if you are
-                not sharing your portfolio with other Hackerspace students.
+                without having to sign in to the {{ config.hs_site_name_short }}.  Your public portfolio is available even if you are
+                not sharing your portfolio with other {{ config.hs_site_name_short }} students.
             </div>
         </div>
 
