--- a/src/portfolios/templates/portfolios/list.html
+++ b/src/portfolios/templates/portfolios/list.html
@@ -1,7 +1,7 @@
 {% extends "portfolios/base.html" %}
 {% load crispy_forms_tags %}
 
-{% block heading_inner %}Hackerspace Portfolios{% endblock %}
+{% block heading_inner %}{{ config.hs_site_name_short }} Portfolios{% endblock %}
 
 {% block content %}
 
