--- a/src/templates/banner.html
+++ b/src/templates/banner.html
@@ -5,5 +5,5 @@
               {% else %}
                  {% static 'img/banner.svg' %}
               {% endif %}"
-     class="img-responsive" alt="Timberline Digital Hackerspace Banner"
+     class="img-responsive" alt="{{ config.hs_site_name }} Banner"
 />
