--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -114,7 +114,7 @@
 
                         <li>
                             <a href="https://docs.google.com/spreadsheets/d/1dICnxDSHkQV2HMuuYLNsQLdUGFrSMskdFe_vSz41_Zw/edit#gid=1467638221">
-                                <i class="fa fa-fw fa-dollar"></i>&nbsp;&nbsp;Hackerspace Budget</a>
+                                <i class="fa fa-fw fa-dollar"></i>&nbsp;&nbsp;{{ config.hs_site_name_short }} Budget</a>
                         </li>
                         <!-- <li><a href="#">#</a></li> -->
                         <!-- <li role="separator" class="divider"></li>
