--- a/src/templates/secret.html
+++ b/src/templates/secret.html
@@ -15,7 +15,7 @@
   <li>How will you know when you've reached the end?  Trust me, you'll know, because the end is accompanied by extreme disappointment.</li>
   <li>You will have much greater chances of success if you team up with someone to do this.</li>
   <li>If you get stuck, ask around.  Other students may have noticed things around the class that you haven't.</li>
-  <li>You don't need to leave the Hackerspace.</li>
+  <li>You don't need to leave the {{ config.hs_site_name_short }}.</li>
     <li>All clues require a different method to solve them.  For example, you've already used binary to get here, so no other clue will use binary.</li>
   <li>When all else fails, try punching it in to the Entrance Theme Machine.</li>
   <li>At some point, you'll need a number.  That number is 2^20. </li>
