--- a/src/templates/403.html
+++ b/src/templates/403.html
@@ -2,6 +2,6 @@
 
 {% block content_outer %}
 
-<h1>403 Error: Permission Denied. Stop trying to hack the Hackerspace!</h1>
+<h1>403 Error: Permission Denied. Stop trying to hack the {{ config.hs_site_name_short }}!</h1>
 
 {% endblock %}
