--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -17,11 +17,19 @@
 
   {#    Group Menus #}
   <div class="nav list-group hidden-xs sidebar-menu" id="lg-menu-main">
-    <a id="quests-menu" class="list-group-item
-        {% if '/quests/' in request.path_info and not '/approvals/' in request.path_info %}active{% endif %}"
-       href="{% url 'quests:quests' %}">
-      <i class="fa fa-shield fa-fw"></i>&nbsp; Quests
-    </a>
+    <div class="clearfix">
+     <a id="quests-menu" class="list-group-item left-side
+        {% if '/quests/' in request.path_info and not '/approvals/' in request.path_info and not '/inprogress/' in request.path_info %}active{% endif %}"
+       href="{% url 'quests:quests' %}"><i class="fa fa-shield fa-fw"></i>&nbsp; Quests</a>
+     <a title="Jump to your In Progress quest list." class="list-group-item right-side
+       {% if 'quests/inprogress/' in request.path_info %}active{% endif %}"                             "
+        href="{% url 'quests:inprogress' %}"><i class="fa fa-shield fa-rotate-45"></i></a>
+    </div>
+{#    <a id="quests-menu" class="list-group-item#}
+{#        {% if '/quests/' in request.path_info and not '/approvals/' in request.path_info %}active{% endif %}"#}
+{#       href="{% url 'quests:quests' %}">#}
+{#      <i class="fa fa-shield fa-fw"></i>&nbsp; Quests#}
+{#    </a>#}
       <a id="achievements-menu"
        class="list-group-item {% if '/achievements/' in request.path_info %}active{% endif %}"
        href="{% url 'badges:list' %}">
