--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -1,3 +1,11 @@
+/********** BASIC ELEMENTS ***********/
+
+h5 {
+    font-weight: 700;
+}
+
+
+
 /********** CUSTOM APPLIED STYLES ***********/
 
 ul.left-aligned, ol.left-aligned {
@@ -12,8 +20,6 @@ ul.left-aligned, ol.left-aligned {
 .tight {
     line-height: 1.2;
 }
-
-
 
 
 /********** Figures ****************/
