--- a/src/quest_manager/templates/quest_manager/preview_content_approvals.html
+++ b/src/quest_manager/templates/quest_manager/preview_content_approvals.html
@@ -2,7 +2,11 @@
   <li class="list-group-item list-group-item-info">Submission Details</li>
   <li class="list-group-item list-group-item">{{s.quest.submission_details|safe}}</li>
   <li class="list-group-item list-group-item-info">Instructor Notes</li>
-  <li class="list-group-item list-group-item">{{s.quest.instructor_notes|safe}}</li>
+  <li class="list-group-item list-group-item">{{s.quest.instructor_notes|safe}}
+      {% if s.quest.specific_teacher_to_notify %}
+          <hr><p>* <b>{{ s.quest.specific_teacher_to_notify }}</b> was notified about this quest submission.</p>
+      {% endif %}
+  </li>
   <li class="list-group-item list-group-item-info">Submission Comments</li>
   {% with s.get_comments as target_comments %}
     {% include "comments/comments.html" %}
