--- a/src/quest_manager/templates/quest_manager/quest_detail_content.html
+++ b/src/quest_manager/templates/quest_manager/quest_detail_content.html
@@ -74,7 +74,7 @@
   <div class="panel-body">
     {{ quest.instructor_notes | safe }}
       {% if quest.specific_teacher_to_notify %}
-          <hr><p>* <b>{{ quest.specific_teacher_to_notify }}</b> is notified about this submissions of this quest.</p>
+          <hr><p>* <b>{{ quest.specific_teacher_to_notify }}</b> is notified about submissions of this quest.</p>
       {% endif %}
   </div>
 </div>
