--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -1,8 +1,8 @@
 {% load staticfiles %}
+{% load utility_tags %}
 
 <!-- Fixed navbar -->
-<nav class="navbar navbar-default navbar-fixed-top
-{% if request.user.profile.chillax %} chillax {% endif %}">
+<nav class="navbar navbar-default navbar-fixed-top {% if request.user.profile.chillax %} chillax {% endif %}">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -12,32 +12,49 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'home' %}"><i class="fa fa-home"></i></a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
 
+            <button type="button" class="navbar-toggle collapsed mobile-notifications"
+                    data-toggle="collapse" data-target="#notification_dropdown"
+                    aria-expanded="false" aria-controls="notification_dropdown"><!--
+                --><span class="sr-only">Toggle notifications</span><!--
+                --><i class="fa fa-bell"></i><!--
+             <span id="notification_badge2" class="badge alert-danger"></span>
+            --></button>
+
+            <!-- Stuff that doesn't collapse on mobile -->
+            <a title="Home" class="navbar-brand" href="{% url 'home' %}">
+                <img alt="Logo" src="{% site_logo_url %}">
+            </a>
+
+            <ul class="nav navbar-nav navbar-no-collapse">
+                <li>&nbsp;</li>
                 {% if request.user.is_authenticated %}
-                <li>&nbsp;&nbsp;</li>
                 <li class="navbar-packed-listitem">
                     <a title="Quests" href="{% url 'quests:quests' %}"><i class="fa fa-shield fa-fw"></i></a></li>
                 <li class="navbar-packed-listitem">
                     <a title="Badges" href="{% url 'badges:list' %}"><i class="fa fa-certificate fa-fw"></i></a></li>
                 <li class="navbar-packed-listitem">
-                    <a title="Students" href="{% url 'profiles:profile_list_current' %}">
-                        <i class="fa fa-users fa-fw"></i></a></li>
+                    <a title="Quest Maps" href="{% url 'maps:primary' %}"><i class="fa fa-map-signs fa-fw"></i></a></li>
                 <li class="navbar-packed-listitem">
-                    <a title="Announcements" href="{% url 'announcements:list' %}"><i
-                            class="fa fa-newspaper-o fa-fw"></i></a></li>
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;</li>
+                    <a title="Announcements" href="{% url 'announcements:list' %}"><i class="fa fa-newspaper-o fa-fw"></i></a>
+                </li>
                 {% else %}
-                    <li>
+                <li>
                     <a title="Public Portfolios" href="{% url 'portfolios:public_list' %}">
                         <i class="fa fa-picture-o fa-fw"></i>
-                    </a></li>
+                    </a>
+                </li>
                 {% endif %}
+            </ul>
 
-                {% if request.user.is_authenticated and request.user.is_staff %}
+        </div>
+
+
+        <div id="navbar" class="navbar-collapse collapse">
+
+            <ul class="nav navbar-nav navbar-right">
+                {% if request.user.is_authenticated %}
+                {% if request.user.is_staff %}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle"
                        data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -56,21 +73,24 @@
                     </ul>
                 </li>
                 {% endif %}
-            </ul>
-
-            <ul class="nav navbar-nav navbar-right">
-                {% if request.user.is_authenticated %}
                 <li id="menu-xp">
                     <a href="{% url 'courses:marks' request.user.id %}"
                        class="navbar-text-large-container">XP:
                         <span class="navbar-text-large"> {{ request.user.profile.xp_cached }}</span>
                     </a>
                 </li>
-                <li id="profile">
-                    <a title="Profile" href="{% url 'profiles:profile_detail' request.user.profile.id %}">
+                <li id="profile" class="navbar-group">
+                    <a title="Profile" class="navbar-avatar"
+                       href="{% url 'profiles:profile_detail' request.user.profile.id %}">
+                        <img src="{{ request.user.profile.get_avatar_url }}">
+                    </a><!--
+                 --><a title="Profile" href="{% url 'profiles:profile_detail' request.user.profile.id %}">
+                        {{ request.user }}
+                    </a><!-- removes whitespace
+                 --><a title="Rank: {{request.user.profile.rank}}" href="{% url 'courses:ranks' %}">
                         <i class="{% if request.user.is_staff %}fa fa-user-secret
-            {% else %} {{request.user.profile.rank.fa_icon}} {% endif %}"></i>
-                        &nbsp; {{ request.user }}
+                            {% else %} {{request.user.profile.rank.fa_icon}} {% endif %}">
+                        </i>
                     </a>
                 </li>
                 <li id='notifications-menu' class="dropdown">
@@ -83,23 +103,6 @@
                     </ul>
                 </li>
 
-                <!-- <li class="dropdown" id="easteregg">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                    role="button" aria-haspopup="true" aria-expanded="false">
-                    <i class="fa fa-user{% if request.user.is_staff %}-secret{%endif%}"></i>
-                    &nbsp; {{ request.user }} <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li class="dropdown-header">Privileges</li>
-                    <li><a href="javascript:var%20KICKASSVERSION='2.0';var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='//hi.kickassapp.com/kickass.js';void(0);">Destroy the Hackerspace</a></li>
-                    <li><a href="javascript:(function%20()%20{var%20s%20=%20document.createElement('script');s.setAttribute('src',%20'http://fontbomb.ilex.ca/js/main.js');document.body.appendChild(s);}());">Bomb the Hackerspace</a></li>
-                    <li><a href='javascript:if(!window.ThreeDit){ThreeDit=function(a,b){function%20G(a){p=a.clientX+g.scrollLeft;q=a.clientY+g.scrollTop}function%20F(){var%20a=g.scrollLeft-t;var%20b=g.scrollTop-u;p=v=g.scrollLeft+r;q=w=g.scrollTop+s;n+=a;o+=b;x=v+l.clientLeft-e.pageXOffset;y=w+l.clientTop-e.pageYOffset;t=g.scrollLeft;u=g.scrollTop}function%20E(){r=e.innerWidth/2;s=e.innerHeight/2;p=v=g.scrollLeft+r;q=w=g.scrollTop+s;x=v+l.clientLeft-e.pageXOffset;y=w+l.clientTop-e.pageYOffset}function%20D(){n+=(p-n)*.05;o+=(q-o)*.05;var%20a=(n-v)/r*5;var%20b=-(o-w)/s*5;for(var%20e=0;e<d.length;e++){var%20f=d[e].node;var%20g=f;var%20h=0;var%20k=0;var%20l=d[e].z;f.style[i]=x-h+"px%20"+(y-k)+"px";f.style[j]="rotateY("+a+"deg)%20rotateX("+b+"deg)translate3d(0px,0px,%20"+l*c.zDepth+"px)"}}function%20C(){var%20a;for(var%20b=0;b<d.length;b++){d[b].node.style[j]="none"}delete%20d;d=[];A(g,0);d.push({node:g,z:0});d.sort(function%20h(a,b){return%20a.z-b.z});var%20c=0;var%20e=[c];d[0].z=c;for(var%20b=1;b<d.length;b++){e.push(c=d[b].z==d[b-1].z?c:c+1)}var%20f=e[e.length-1];for(var%20b=0;b<d.length;b++){d[b].z=e[b]/f}}function%20B(a){c.perspective=a;k[h+"Perspective"]=c.perspective+"px"}function%20A(a,b,e){if(d.length>=c.maxElems-1)return;if(!e&&a.tagName=="DIV"&&a.childNodes.length>0){d.push({node:a,z:b})}for(var%20f=0;f<a.childNodes.length;f++){A(a.childNodes[f],b+1,a.childNodes.length<2)}}function%20z(a){f=a;g=f.body;h="webkitTransform"in%20g.style?"webkit":"MozTransform"in%20g.style?"Moz":null;i=h+"TransformOrigin";j=h+"Transform";l=f.documentElement;k=l.style;m=e.getComputedStyle;t=g.scrollLeft;u=g.scrollTop;k[h+"Perspective"]=c.perspective+"px";k.backgroundImage=m(g).getPropertyValue("background-image");k.backgroundColor=m(g).getPropertyValue("background-color");C();if(!c.initialized){E();n=p;o=q;e.addEventListener("resize",E);e.addEventListener("scroll",F);f.addEventListener("mousemove",G);setInterval(D,1e3/60)}c.initialized=true}var%20c={zDepth:300,maxElems:100,perspective:500,initialized:false};var%20d=[];var%20e=a;var%20f=b;var%20g;var%20h;var%20i;var%20j;var%20k;var%20l;var%20m;var%20n;var%20o;var%20p;var%20q;var%20r;var%20s;var%20t;var%20u;var%20v;var%20w;var%20x;var%20y;c.init=z;c.recollectElems=C;c.render=D;c.changePerspective=B;return%20c}(window,document);ThreeDit.init(document);}else{ThreeDit.recollectElems();}'>3D Hackerspace</a></li>
-                    <li><a href='javascript:var%20script=document.createElement("script");script.src="http://google-gravity-bookmarklet.googlecode.com/svn/trunk/bookmarklet/";document.body.appendChild(script);void(0);'>Turn on Gravity</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li class="dropdown-header">Profile</li>
-                    <li><a href="{% url 'profiles:profile_detail' request.user.profile.id %}">View Profile</a></li>
-                    <li><a href="{% url 'notifications:list'%}">Notifications</a></li>
-                  </ul>
-                </li> -->
                 <li id="extras-menu" class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                        role="button" aria-haspopup="true" aria-expanded="false">
@@ -140,5 +143,12 @@
 
             {% endif %}
         </div><!--/.nav-collapse -->
+
+
+
+
+
+
+
     </div>
 </nav>
