--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -4,10 +4,10 @@
 <!-- sidebar -->
 
 <div id="sidebar_menu">
-  <ul class="nav sidebar-menu-nav">
-    <li><a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i class="fa fa-chevron-right fa-fw"></i></a>
-    </li>
-  </ul>
+{#  <ul class="nav sidebar-menu-nav">#}
+{#    <li><a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i class="fa fa-chevron-right fa-fw"></i></a>#}
+{#    </li>#}
+{#  </ul>#}
 
   <!--so logo margins align with main div headings-->
   <h3 class="hidden-xs">
@@ -101,28 +101,27 @@
   <!-- tiny only nav-->
 
 
-
-  <ul class="nav visible-xs xs-sidebar-menu" id="xs-menu">
-    <li><a href="{% url 'quests:quests' %}"><i class="fa fa-shield fa-fw"></i></a></li>
-    <li><a href="{% url 'badges:list' %}" class="text-center"><i class="fa fa-certificate fa-fw"></i></a></li>
-    <li><a href="{% url 'maps:primary' %}" class="text-center"><i class="fa fa-map-signs fa-fw"></i></a></li>
-  </ul>
-<ul class="nav visible-xs xs-sidebar-menu" id="xs-second-menu">
-  <li><a href="{% url 'announcements:list' %}" class="text-center"><i class="fa fa-newspaper-o fa-fw"></i></a></li>
-  <li><a href=""{% url 'suggestions:list' %}" class="text-center"><i class="fa fa-lightbulb-o fa-fw"></i></a></li>
-      <li><a href="{% url 'profiles:profile_list' %}"><i class="fa fa-users fa-fw"></i></a></li>
-
-</ul>
-  <ul class="nav visible-xs xs-sidebar-menu" id="xs-user-menu">
-    <li><a href="{% url 'profiles:profile_detail' request.user.profile.id %}"><i class="fa fa-user fa-fw"></i></a></li>
-    <li><a href="{% url 'portfolios:detail' request.user.id %}" class="text-center">
-        <i class="fa fa-picture-o fa-fw"></i></a></li>
-  </ul>
-  {% if request.user.is_staff %}
-    <ul class="nav visible-xs xs-sidebar-menu" id="xs-menu-staff">
-      <li><a href="{% url 'quests:approvals' %}"><i class="fa fa-shield fa-fw"></i></a></li>
-    </ul>
-  {% endif %}
+{#  <ul class="nav visible-xs xs-sidebar-menu" id="xs-menu">#}
+{#    <li><a href="{% url 'quests:quests' %}"><i class="fa fa-shield fa-fw"></i></a></li>#}
+{#    <li><a href="{% url 'badges:list' %}" class="text-center"><i class="fa fa-certificate fa-fw"></i></a></li>#}
+{#    <li><a href="{% url 'maps:primary' %}" class="text-center"><i class="fa fa-map-signs fa-fw"></i></a></li>#}
+{#  </ul>#}
+{#<ul class="nav visible-xs xs-sidebar-menu" id="xs-second-menu">#}
+{#  <li><a href="{% url 'announcements:list' %}" class="text-center"><i class="fa fa-newspaper-o fa-fw"></i></a></li>#}
+{#  <li><a href=""{% url 'suggestions:list' %}" class="text-center"><i class="fa fa-lightbulb-o fa-fw"></i></a></li>#}
+{#      <li><a href="{% url 'profiles:profile_list' %}"><i class="fa fa-users fa-fw"></i></a></li>#}
+{##}
+{#</ul>#}
+{#  <ul class="nav visible-xs xs-sidebar-menu" id="xs-user-menu">#}
+{#    <li><a href="{% url 'profiles:profile_detail' request.user.profile.id %}"><i class="fa fa-user fa-fw"></i></a></li>#}
+{#    <li><a href="{% url 'portfolios:detail' request.user.id %}" class="text-center">#}
+{#        <i class="fa fa-picture-o fa-fw"></i></a></li>#}
+{#  </ul>#}
+{#  {% if request.user.is_staff %}#}
+{#    <ul class="nav visible-xs xs-sidebar-menu" id="xs-menu-staff">#}
+{#      <li><a href="{% url 'quests:approvals' %}"><i class="fa fa-shield fa-fw"></i></a></li>#}
+{#    </ul>#}
+{#  {% endif %}#}
 </div>
 
 <!-- /sidebar -->
