--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -165,6 +165,17 @@ li.navbar-group > a:last-child {
     padding-bottom: 15px;
 }
 
+/*.navbar-centered {*/
+    /*display: inline;*/
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
+/*}*/
+
+/*.navbar-centered > a {*/
+    /*display: flex;*/
+    /*align-items: center;*/
+/*}*/
+
 button.mobile-notifications {
     padding-top: 6px;
     padding-bottom: 6px;
@@ -348,17 +359,19 @@ ol > ol > ol {
 }
 
 /*********** Bootstrap BADGES **************************/
-#notification_badge {
-    margin-top: 0px;
-}
 
-.badge.alert-danger {
+.badge.list-group-item-badge {
     margin-top: 3px;
 }
 
 .nav-tabs .badge {
     margin-top: -2px;
     margin-left: 10px;
+}
+
+.notification-badge {
+    margin-top: 0px;
+    margin-left: 5px;
 }
 
 /************ ICONS **********************/
