--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -179,8 +179,27 @@ li.navbar-group > a:last-child {
 button.mobile-notifications {
     padding-top: 6px;
     padding-bottom: 6px;
+    margin-right: 15px;
+    margin-left: 15px;
 }
 
+.mobile-notification-dropdown-container > .navbar-collapse {
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.navbar-mobile-xp {
+    position: relative;
+    float: right;
+    margin: 0;
+    /*color: #777;*/
+    /*margin-bottom: -3px;*/
+}
+
+.navbar-mobile-xp > li > a {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
 
 /*********************************/
 
