--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -197,8 +197,7 @@ button.mobile-notifications {
 }
 
 .navbar-mobile-xp > li > a {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding: 15px 0px;
 }
 
 /*********************************/
